# typst-wysiwyg

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
src/: assets.ts  blockhandle.ts  bubble.ts  desktop.ts  editor.ts  fidelity.test.ts  footnoteview.ts  generate.ts  highlight.ts  imageview.ts  main.ts  mathinlineview.ts  mathview.ts  model.ts  pagination.ts  roundtrip.test.ts  search.ts  serialize.ts  slash.ts  styles.css  tablesync.ts  templates.ts  typimport.ts  typst.ts  typst.worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
