[package]
name = "typst-wysiwyg"
version = "0.0.1"
description = "A WYSIWYG editor for Typst (desktop showcase)"
authors = ["Ortic"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "typst_wysiwyg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
